--- a/PopupWarehouse/appsettings.json
+++ b/PopupWarehouse/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-      "TestConnection": "Server=GWTC51427\\SQLEXPRESS;Database=Test;User Id=Test;Password=password;"
+      "TestConnection": "Server=GWTC51427\\SQLEXPRESS;Database=Test;User Id=Test;Password=password;TrustServerCertificate=True;"
     }
 }
   
